Изменения: - Сделал интерфейс реагируемым на вытаскивание SD карты (чтоб иконка менялась во время того когда ее высунули и наоборот) - Изменил логику работу переноса файлов на SD карту, вместо переноса сделал копирование. - Добавил иконку приложения для продакшена - Попытка увеличить размер видео/фото

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_app_icon"
+        android:roundIcon="@mipmap/ic_app_icon_round"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
@@ -35,6 +36,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name=".GalleryActivity2$SDCardBroadcastReceiver" >
+            <intent-filter>
+                <data android:scheme="file" />
+                <action android:name="android.intent.action.MEDIA_REMOVED" />
+                <action android:name="android.intent.action.MEDIA_MOUNTED" />
+                <action android:name="android.intent.action.MEDIA_EJECT" />
+                <action android:name="android.intent.action.MEDIA_BAD_REMOVAL" />
+            </intent-filter>
+        </receiver>
     </application>
-
 </manifest>
