--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_app_icon"
-        android:roundIcon="@mipmap/ic_app_icon_round"
+        android:icon="@drawable/ic_pebble_cam_icon"
+        android:roundIcon="@drawable/ic_pebble_cam_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
